--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "graphql": "^16.6.0",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-instagram-embed": "^3.0.0",
+    "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "react-twitter-embed": "^4.0.4",
     "react-youtube": "^10.1.0",
