--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "eslint-config-next": "13.0.7",
     "graphql": "^16.6.0",
     "next": "13.0.7",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-adsense-ads": "^3.5.1",
     "react-dom": "^18.2.0",
+    "react-google-ads": "^1.0.5",
     "react-slick": "^0.29.0",
     "react-twitter-embed": "^4.0.4",
     "react-youtube": "^10.1.0",
