--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/react": "^1.6.1",
     "@next/font": "13.0.7",
     "@react-hook/mouse-position": "^4.1.3",
+    "@vercel/analytics": "^0.1.11",
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
