--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-hook/mouse-position": "^4.1.3",
     "@vercel/analytics": "^0.1.11",
     "date-fns": "^2.29.3",
+    "devtools-detect": "^4.0.1",
+    "disable-devtool": "^0.3.4",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "graphql": "^16.6.0",
